[package]
name = "solana-mint-fixture"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Bets <ivan.bets17@gmail.com>"]

[dependencies]
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-sdk = "2.3.1"
solana-program-test = { version = "2.3.1", optional = true }
solana-client = { version = "2.3.1", optional = true }

[features]
full = ["rpc", "banks"]
rpc = ["solana-client"]
banks = ["solana-program-test"]