[package]
name = "solana-mint-fixture"
version = "0.1.0"
edition = "2021"
description = "Lightweight utility library for creating SPL Token-2022 mints and ATAs in BanksClient tests and RpcClient environments."
readme = "README.md"
repository = "https://github.com/ibg101/solana-mint-fixture"
license = "MIT OR Apache-2.0"
keywords = ["spl-token", "solana", "mint-fixture", "testing", "ata"]
authors = ["Ivan Bets <ivan.bets17@gmail.com>"]

[dependencies]
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-sdk = "2.3.1"
solana-program-test = { version = "2.3.1", optional = true }
solana-client = { version = "2.3.1", optional = true }

[dev-dependencies] 
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"]}

[features]
default = ["full"]
full = ["rpc", "banks"]
rpc = ["solana-client"]
banks = ["solana-program-test"]